--- a/p8105_hw3_cz2540.md
+++ b/p8105_hw3_cz2540.md
@@ -1,7 +1,9 @@
-Data Science: Homework 3
+Homework 3
 ================
 Connie Zhang
 10/09/2019
+
+# Problem 1
 
 ``` r
 instacart = 
@@ -48,16 +50,89 @@ arrange (desc(n))
 
 ``` r
 instacart %>%
-  count(aisle_id) %>%
-  filter(n >10000) %>%
-  ggplot(aes(x = aisle_id, y = n)) + ggtitle("Quantity of Items Ordered in Each Aisle") +
+  group_by(aisle) %>%
+  summarize(aisle_n = n()) %>%
+  filter(aisle_n >10000) %>%
+  arrange (desc(aisle_n)) %>%
+  ggplot(aes(x = aisle, y = aisle_n, color = aisle)) + ggtitle("Quantity of Items Ordered in Each Aisle") +
   theme(plot.title = element_text(hjust = 0.5))+ geom_point() + 
-  labs(       x = "aisle ID",
+  labs(       x = "aisle",
               y = "number of items ordered in aisle")
 ```
 
 ![](p8105_hw3_cz2540_files/figure-gfm/unnamed-chunk-3-1.png)<!-- -->
 
+``` r
+theme (axis.text.x = element_text(angle = 70, hjust = 1))
+```
+
+    ## List of 1
+    ##  $ axis.text.x:List of 11
+    ##   ..$ family       : NULL
+    ##   ..$ face         : NULL
+    ##   ..$ colour       : NULL
+    ##   ..$ size         : NULL
+    ##   ..$ hjust        : num 1
+    ##   ..$ vjust        : NULL
+    ##   ..$ angle        : num 70
+    ##   ..$ lineheight   : NULL
+    ##   ..$ margin       : NULL
+    ##   ..$ debug        : NULL
+    ##   ..$ inherit.blank: logi FALSE
+    ##   ..- attr(*, "class")= chr [1:2] "element_text" "element"
+    ##  - attr(*, "class")= chr [1:2] "theme" "gg"
+    ##  - attr(*, "complete")= logi FALSE
+    ##  - attr(*, "validate")= logi TRUE
+
   - Table that shows three most popular items in aisles “baking
     ingredients”, “dog food care”, and “packaged vegetables fruits”.
   - Include the number of times each item is ordered in your table.
+
+<!-- end list -->
+
+``` r
+table_popular = 
+instacart %>%
+  filter(aisle %in% c("baking ingredients", "dog food care", "packaged vegetables fruits")) %>%
+  group_by(aisle) %>%
+  count(product_name, name = "product_count") %>%
+  mutate(product_rank = min_rank(desc(product_count))) %>%
+  filter(min_rank(product_rank) < 4) %>%
+knitr::kable()
+table_popular
+```
+
+| aisle                      | product\_name                                 | product\_count | product\_rank |
+| :------------------------- | :-------------------------------------------- | -------------: | ------------: |
+| baking ingredients         | Cane Sugar                                    |            336 |             3 |
+| baking ingredients         | Light Brown Sugar                             |            499 |             1 |
+| baking ingredients         | Pure Baking Soda                              |            387 |             2 |
+| dog food care              | Organix Chicken & Brown Rice Recipe           |             28 |             2 |
+| dog food care              | Small Dog Biscuits                            |             26 |             3 |
+| dog food care              | Snack Sticks Chicken & Rice Recipe Dog Treats |             30 |             1 |
+| packaged vegetables fruits | Organic Baby Spinach                          |           9784 |             1 |
+| packaged vegetables fruits | Organic Blueberries                           |           4966 |             3 |
+| packaged vegetables fruits | Organic Raspberries                           |           5546 |             2 |
+
+  - Table that shows the mean hour of the day at which Pink Lady Apples
+    and Coffee Ice Cream are ordered on each day of the week; format
+    this table for human readers (i.e. produce a 2 x 7 table)
+
+<!-- end list -->
+
+``` r
+table_icecream_apple = instacart %>%
+  select(product_name, order_dow, order_hour_of_day) %>%
+  group_by(product_name, order_dow) %>%
+  summarize(mean_hour = mean(order_hour_of_day)) %>%
+  mutate(order_dow = recode(order_dow, "0" = "Sunday", "1" = "Monday", "2" = "Tuesday", "3" = "Wednesday", "4" = "Thursday", "5" = "Friday", "6" = "Saturday")) %>%
+  filter(product_name %in% c("Pink Lady Apples", "Coffee Ice Cream")) %>%
+  pivot_wider(names_from = "order_dow", values_from = "mean_hour") %>%
+knitr::kable(digits = 2)
+table_icecream_apple
+```
+
+| product\_name    | Sunday | Monday | Tuesday | Wednesday | Thursday | Friday | Saturday |
+| :--------------- | -----: | -----: | ------: | --------: | -------: | -----: | -------: |
+| Coffee Ice Cream |  13.77 |  14.32 |   15.38 |     15.32 |    15.22 |  12.26 |    13.83 |
+| Pink Lady Apples |  13.44 |  11.36 |   11.70 |     14.25 |    11.55 |  12.78 |    11.94 |
