--- a/p8105_hw3_cz2540.md
+++ b/p8105_hw3_cz2540.md
@@ -116,24 +116,38 @@ knitr::kable(digits = 2)
 
 # Problem 2
 
-  - How to arrange from poor to excellent \*
-  - How to take out dashes in the columns that separate county and state
-    \*
-
-<!-- end list -->
-
 ``` r
-#import data
 data("brfss_smart2010")
-
-#clean data
 cleanbrfss_data = brfss_smart2010 %>%
   janitor::clean_names() %>% 
-  rename(state = locationabbr, county = locationdesc) %>% 
+  separate(locationdesc, into = c("state", "county"), sep=3) %>%
+  select(-locationabbr) %>%
   filter(topic == "Overall Health") %>% 
-  filter(response %in% c("Poor", "Fair","Good", "Very good", "Excellent")) %>% 
-  mutate(response = factor(response, levels = c("Poor", "Fair","Good", "Very good", "Excellent"))) 
+  filter(response %in% c("Poor","Fair","Good","Very good", "Excellent")) %>% 
+  mutate(response = factor(response, levels = c("Poor", "Fair","Good", "Very good", "Excellent"))) %>%
+  mutate(county = stringr::str_replace(county, "- ", ""))
+cleanbrfss_data
 ```
+
+    ## # A tibble: 10,625 x 23
+    ##     year state county class topic question response sample_size data_value
+    ##    <int> <chr> <chr>  <chr> <chr> <chr>    <fct>          <int>      <dbl>
+    ##  1  2010 "AL " Jeffe… Heal… Over… How is … Excelle…          94       18.9
+    ##  2  2010 "AL " Jeffe… Heal… Over… How is … Very go…         148       30  
+    ##  3  2010 "AL " Jeffe… Heal… Over… How is … Good             208       33.1
+    ##  4  2010 "AL " Jeffe… Heal… Over… How is … Fair             107       12.5
+    ##  5  2010 "AL " Jeffe… Heal… Over… How is … Poor              45        5.5
+    ##  6  2010 "AL " Mobil… Heal… Over… How is … Excelle…          91       15.6
+    ##  7  2010 "AL " Mobil… Heal… Over… How is … Very go…         177       31.3
+    ##  8  2010 "AL " Mobil… Heal… Over… How is … Good             224       31.2
+    ##  9  2010 "AL " Mobil… Heal… Over… How is … Fair             120       15.5
+    ## 10  2010 "AL " Mobil… Heal… Over… How is … Poor              66        6.4
+    ## # … with 10,615 more rows, and 14 more variables:
+    ## #   confidence_limit_low <dbl>, confidence_limit_high <dbl>,
+    ## #   display_order <int>, data_value_unit <chr>, data_value_type <chr>,
+    ## #   data_value_footnote_symbol <chr>, data_value_footnote <chr>,
+    ## #   data_source <chr>, class_id <chr>, topic_id <chr>, location_id <chr>,
+    ## #   question_id <chr>, respid <chr>, geo_location <chr>
 
 States that were observed in 2002 at 7 or more locations:
 
@@ -149,12 +163,12 @@ cleanbrfss_data %>%
     ## # A tibble: 6 x 2
     ##   state n_location
     ##   <chr>      <int>
-    ## 1 CT             7
-    ## 2 FL             7
-    ## 3 NC             7
-    ## 4 MA             8
-    ## 5 NJ             8
-    ## 6 PA            10
+    ## 1 "CT "          7
+    ## 2 "FL "          7
+    ## 3 "NC "          7
+    ## 4 "MA "          8
+    ## 5 "NJ "          8
+    ## 6 "PA "         10
 
   - In 2002, Connecticut, Florida, Massachusetts, North Carolina, New
     Jersey, and Pennsylvania were observed at 7 or more locations.
@@ -173,20 +187,20 @@ cleanbrfss_data %>%
     ## # A tibble: 14 x 2
     ##    state n_location
     ##    <chr>      <int>
-    ##  1 CO             7
-    ##  2 PA             7
-    ##  3 SC             7
-    ##  4 OH             8
-    ##  5 MA             9
-    ##  6 NY             9
-    ##  7 NE            10
-    ##  8 WA            10
-    ##  9 CA            12
-    ## 10 MD            12
-    ## 11 NC            12
-    ## 12 TX            16
-    ## 13 NJ            19
-    ## 14 FL            41
+    ##  1 "CO "          7
+    ##  2 "PA "          7
+    ##  3 "SC "          7
+    ##  4 "OH "          8
+    ##  5 "MA "          9
+    ##  6 "NY "          9
+    ##  7 "NE "         10
+    ##  8 "WA "         10
+    ##  9 "CA "         12
+    ## 10 "MD "         12
+    ## 11 "NC "         12
+    ## 12 "TX "         16
+    ## 13 "NJ "         19
+    ## 14 "FL "         41
 
   - In 2010, Colorado, Pennsylvania, South Carolina, Ohio, Maryland, New
     York, Nebraska, Washington, California, Maryland, North Carolina,
@@ -203,4 +217,87 @@ brfss_excellent = cleanbrfss_data %>%
 ```
 
 “Spaghetti” plot of this average value over time within a state (that
-is, make a plot showing a line for each state across years:
+is, make a plot showing a line for each state across years):
+
+``` r
+brfss_excellent %>%
+ggplot(aes(x = year , y = avg_data, color=state)) + geom_line() + 
+labs(title = "Average Value Over Time within a State", x = "Year", y = "Average Value") + 
+viridis::scale_color_viridis(discrete = TRUE) + theme_minimal() + theme(plot.title = element_text(hjust = 0.5, size = 14), axis.text.x = element_text(angle=70, hjust=1)) + theme(legend.position = "right", axis.text.x = element_text(angle=70, hjust=1))
+```
+
+    ## Warning: Removed 3 rows containing missing values (geom_path).
+
+![](p8105_hw3_cz2540_files/figure-gfm/unnamed-chunk-10-1.png)<!-- -->
+
+Two-panel plot showing, for the years 2006, and 2010, distribution of
+data\_value for responses (“Poor” to “Excellent”) among locations in NY
+State
+
+# Problem 3
+
+``` r
+acc_data = 
+  read_csv("./data/accel_data.csv") %>%
+  janitor::clean_names() 
+```
+
+    ## Parsed with column specification:
+    ## cols(
+    ##   .default = col_double(),
+    ##   day = col_character()
+    ## )
+
+    ## See spec(...) for full column specifications.
+
+``` r
+acc_data
+```
+
+    ## # A tibble: 35 x 1,443
+    ##     week day_id day   activity_1 activity_2 activity_3 activity_4
+    ##    <dbl>  <dbl> <chr>      <dbl>      <dbl>      <dbl>      <dbl>
+    ##  1     1      1 Frid…       88.4       82.2       64.4       70.0
+    ##  2     1      2 Mond…        1          1          1          1  
+    ##  3     1      3 Satu…        1          1          1          1  
+    ##  4     1      4 Sund…        1          1          1          1  
+    ##  5     1      5 Thur…       47.4       48.8       46.9       35.8
+    ##  6     1      6 Tues…       64.8       59.5       73.7       45.7
+    ##  7     1      7 Wedn…       71.1      103.        68.5       45.4
+    ##  8     2      8 Frid…      675        542       1010        779  
+    ##  9     2      9 Mond…      291        335        393        335  
+    ## 10     2     10 Satu…       64         11          1          1  
+    ## # … with 25 more rows, and 1,436 more variables: activity_5 <dbl>,
+    ## #   activity_6 <dbl>, activity_7 <dbl>, activity_8 <dbl>,
+    ## #   activity_9 <dbl>, activity_10 <dbl>, activity_11 <dbl>,
+    ## #   activity_12 <dbl>, activity_13 <dbl>, activity_14 <dbl>,
+    ## #   activity_15 <dbl>, activity_16 <dbl>, activity_17 <dbl>,
+    ## #   activity_18 <dbl>, activity_19 <dbl>, activity_20 <dbl>,
+    ## #   activity_21 <dbl>, activity_22 <dbl>, activity_23 <dbl>,
+    ## #   activity_24 <dbl>, activity_25 <dbl>, activity_26 <dbl>,
+    ## #   activity_27 <dbl>, activity_28 <dbl>, activity_29 <dbl>,
+    ## #   activity_30 <dbl>, activity_31 <dbl>, activity_32 <dbl>,
+    ## #   activity_33 <dbl>, activity_34 <dbl>, activity_35 <dbl>,
+    ## #   activity_36 <dbl>, activity_37 <dbl>, activity_38 <dbl>,
+    ## #   activity_39 <dbl>, activity_40 <dbl>, activity_41 <dbl>,
+    ## #   activity_42 <dbl>, activity_43 <dbl>, activity_44 <dbl>,
+    ## #   activity_45 <dbl>, activity_46 <dbl>, activity_47 <dbl>,
+    ## #   activity_48 <dbl>, activity_49 <dbl>, activity_50 <dbl>,
+    ## #   activity_51 <dbl>, activity_52 <dbl>, activity_53 <dbl>,
+    ## #   activity_54 <dbl>, activity_55 <dbl>, activity_56 <dbl>,
+    ## #   activity_57 <dbl>, activity_58 <dbl>, activity_59 <dbl>,
+    ## #   activity_60 <dbl>, activity_61 <dbl>, activity_62 <dbl>,
+    ## #   activity_63 <dbl>, activity_64 <dbl>, activity_65 <dbl>,
+    ## #   activity_66 <dbl>, activity_67 <dbl>, activity_68 <dbl>,
+    ## #   activity_69 <dbl>, activity_70 <dbl>, activity_71 <dbl>,
+    ## #   activity_72 <dbl>, activity_73 <dbl>, activity_74 <dbl>,
+    ## #   activity_75 <dbl>, activity_76 <dbl>, activity_77 <dbl>,
+    ## #   activity_78 <dbl>, activity_79 <dbl>, activity_80 <dbl>,
+    ## #   activity_81 <dbl>, activity_82 <dbl>, activity_83 <dbl>,
+    ## #   activity_84 <dbl>, activity_85 <dbl>, activity_86 <dbl>,
+    ## #   activity_87 <dbl>, activity_88 <dbl>, activity_89 <dbl>,
+    ## #   activity_90 <dbl>, activity_91 <dbl>, activity_92 <dbl>,
+    ## #   activity_93 <dbl>, activity_94 <dbl>, activity_95 <dbl>,
+    ## #   activity_96 <dbl>, activity_97 <dbl>, activity_98 <dbl>,
+    ## #   activity_99 <dbl>, activity_100 <dbl>, activity_101 <dbl>,
+    ## #   activity_102 <dbl>, activity_103 <dbl>, activity_104 <dbl>, …
