Cleaned dataset for problem 2

--- a/p8105_hw3_cz2540.md
+++ b/p8105_hw3_cz2540.md
@@ -232,7 +232,7 @@ viridis::scale_color_viridis(discrete = TRUE) + theme_minimal() + theme(plot.tit
 
 Two-panel plot showing, for the years 2006, and 2010, distribution of
 data\_value for responses (“Poor” to “Excellent”) among locations in NY
-State
+State:
 
 # Problem 3
 
