--- a/p8105_hw3_cz2540.Rmd
+++ b/p8105_hw3_cz2540.Rmd
@@ -71,15 +71,17 @@ knitr::kable(digits = 2)
 
 # Problem 2
 ```{r}
-data("brfss_smart2010")
-cleanbrfss_data = brfss_smart2010 %>%
+data("brfss_smart2010") #load data
+```
+
+```{r}
+cleanbrfss_data = 
+  brfss_smart2010 %>% #clean data 
   janitor::clean_names() %>% 
   separate(locationdesc, into = c("state", "county"), sep=3) %>%
   select(-locationabbr) %>%
-  filter(topic == "Overall Health") %>% 
-  filter(response %in% c("Poor","Fair","Good","Very good", "Excellent")) %>% 
-  mutate(response = factor(response, levels = c("Poor", "Fair","Good", "Very good", "Excellent"))) %>%
-  mutate(county = stringr::str_replace(county, "- ", ""))
+  filter(topic == "Overall Health", response %in% c("Poor","Fair","Good","Very good", "Excellent")) %>% 
+  mutate(county = stringr::str_replace(county, "- ", ""), response = factor(response, levels = c("Poor", "Fair","Good", "Very good", "Excellent"))) 
 cleanbrfss_data
 ```
 
@@ -111,6 +113,7 @@ brfss_excellent = cleanbrfss_data %>%
   filter(response == "Excellent") %>%
   group_by(state, year, response) %>% 
   summarize(avg_data = mean(data_value))
+brfss_excellent
 ```
 
 “Spaghetti” plot of this average value over time within a state (that is, make a plot showing a line for each state across years): 
