--- a/p8105_hw3_cz2540.md
+++ b/p8105_hw3_cz2540.md
@@ -117,15 +117,17 @@ knitr::kable(digits = 2)
 # Problem 2
 
 ``` r
-data("brfss_smart2010")
-cleanbrfss_data = brfss_smart2010 %>%
+data("brfss_smart2010") #load data
+```
+
+``` r
+cleanbrfss_data = 
+  brfss_smart2010 %>% #clean data 
   janitor::clean_names() %>% 
   separate(locationdesc, into = c("state", "county"), sep=3) %>%
-  select(-locationabbr) %>%
-  filter(topic == "Overall Health") %>% 
-  filter(response %in% c("Poor","Fair","Good","Very good", "Excellent")) %>% 
-  mutate(response = factor(response, levels = c("Poor", "Fair","Good", "Very good", "Excellent"))) %>%
-  mutate(county = stringr::str_replace(county, "- ", ""))
+  select (-locationabbr) %>%
+   filter(topic == "Overall Health", response %in% c("Poor","Fair","Good","Very good", "Excellent")) %>% 
+  mutate(county = stringr::str_replace(county, "- ", ""), response = factor(response, levels = c("Poor", "Fair","Good", "Very good", "Excellent"))) 
 cleanbrfss_data
 ```
 
@@ -212,9 +214,26 @@ averages of the data\_value across locations within a state:
 ``` r
 brfss_excellent = cleanbrfss_data %>% 
   filter(response == "Excellent") %>%
-  group_by(state, year, response) %>% 
+  group_by(year, state, county) %>% 
   summarize(avg_data = mean(data_value))
+brfss_excellent
 ```
+
+    ## # A tibble: 2,125 x 4
+    ## # Groups:   year, state [443]
+    ##     year state county                 avg_data
+    ##    <int> <chr> <chr>                     <dbl>
+    ##  1  2002 "AK " Anchorage Municipality     27.9
+    ##  2  2002 "AL " Jefferson County           18.5
+    ##  3  2002 "AR " Pulaski County             24.1
+    ##  4  2002 "AZ " Maricopa County            21.6
+    ##  5  2002 "AZ " Pima County                26.6
+    ##  6  2002 "CA " Los Angeles County         22.7
+    ##  7  2002 "CO " Adams County               21.2
+    ##  8  2002 "CO " Arapahoe County            25.5
+    ##  9  2002 "CO " Denver County              22.2
+    ## 10  2002 "CO " Jefferson County           23.4
+    ## # … with 2,115 more rows
 
 “Spaghetti” plot of this average value over time within a state (that
 is, make a plot showing a line for each state across years):
@@ -222,13 +241,11 @@ is, make a plot showing a line for each state across years):
 ``` r
 brfss_excellent %>%
 ggplot(aes(x = year , y = avg_data, color=state)) + geom_line() + 
-labs(title = "Average Value Over Time within a State", x = "Year", y = "Average Value") + 
+labs(title = "Average Value Over Time Within Each State", x = "Year", y = "Average Value") + 
 viridis::scale_color_viridis(discrete = TRUE) + theme_minimal() + theme(plot.title = element_text(hjust = 0.5, size = 14), axis.text.x = element_text(angle=70, hjust=1)) + theme(legend.position = "right", axis.text.x = element_text(angle=70, hjust=1))
 ```
 
-    ## Warning: Removed 3 rows containing missing values (geom_path).
-
-![](p8105_hw3_cz2540_files/figure-gfm/unnamed-chunk-10-1.png)<!-- -->
+![](p8105_hw3_cz2540_files/figure-gfm/unnamed-chunk-11-1.png)<!-- -->
 
 Two-panel plot showing, for the years 2006, and 2010, distribution of
 data\_value for responses (“Poor” to “Excellent”) among locations in NY
@@ -239,7 +256,11 @@ State:
 ``` r
 acc_data = 
   read_csv("./data/accel_data.csv") %>%
-  janitor::clean_names() 
+  janitor::clean_names() %>%
+  pivot_longer (
+    activity_1:activity_1440, names_to = "activity_min", values_to = "activity_count") %>%
+  mutate(activity_min = stringr::str_replace(activity_min, "activity_", " ")) %>%
+  mutate(weekkday = day %in% c("Monday", "Tuesday", "Wednesday", "Thursday", "Friday"), weekend = day %in% c("Saturday", "Sunday"))
 ```
 
     ## Parsed with column specification:
@@ -254,50 +275,31 @@ acc_data =
 acc_data
 ```
 
-    ## # A tibble: 35 x 1,443
-    ##     week day_id day   activity_1 activity_2 activity_3 activity_4
-    ##    <dbl>  <dbl> <chr>      <dbl>      <dbl>      <dbl>      <dbl>
-    ##  1     1      1 Frid…       88.4       82.2       64.4       70.0
-    ##  2     1      2 Mond…        1          1          1          1  
-    ##  3     1      3 Satu…        1          1          1          1  
-    ##  4     1      4 Sund…        1          1          1          1  
-    ##  5     1      5 Thur…       47.4       48.8       46.9       35.8
-    ##  6     1      6 Tues…       64.8       59.5       73.7       45.7
-    ##  7     1      7 Wedn…       71.1      103.        68.5       45.4
-    ##  8     2      8 Frid…      675        542       1010        779  
-    ##  9     2      9 Mond…      291        335        393        335  
-    ## 10     2     10 Satu…       64         11          1          1  
-    ## # … with 25 more rows, and 1,436 more variables: activity_5 <dbl>,
-    ## #   activity_6 <dbl>, activity_7 <dbl>, activity_8 <dbl>,
-    ## #   activity_9 <dbl>, activity_10 <dbl>, activity_11 <dbl>,
-    ## #   activity_12 <dbl>, activity_13 <dbl>, activity_14 <dbl>,
-    ## #   activity_15 <dbl>, activity_16 <dbl>, activity_17 <dbl>,
-    ## #   activity_18 <dbl>, activity_19 <dbl>, activity_20 <dbl>,
-    ## #   activity_21 <dbl>, activity_22 <dbl>, activity_23 <dbl>,
-    ## #   activity_24 <dbl>, activity_25 <dbl>, activity_26 <dbl>,
-    ## #   activity_27 <dbl>, activity_28 <dbl>, activity_29 <dbl>,
-    ## #   activity_30 <dbl>, activity_31 <dbl>, activity_32 <dbl>,
-    ## #   activity_33 <dbl>, activity_34 <dbl>, activity_35 <dbl>,
-    ## #   activity_36 <dbl>, activity_37 <dbl>, activity_38 <dbl>,
-    ## #   activity_39 <dbl>, activity_40 <dbl>, activity_41 <dbl>,
-    ## #   activity_42 <dbl>, activity_43 <dbl>, activity_44 <dbl>,
-    ## #   activity_45 <dbl>, activity_46 <dbl>, activity_47 <dbl>,
-    ## #   activity_48 <dbl>, activity_49 <dbl>, activity_50 <dbl>,
-    ## #   activity_51 <dbl>, activity_52 <dbl>, activity_53 <dbl>,
-    ## #   activity_54 <dbl>, activity_55 <dbl>, activity_56 <dbl>,
-    ## #   activity_57 <dbl>, activity_58 <dbl>, activity_59 <dbl>,
-    ## #   activity_60 <dbl>, activity_61 <dbl>, activity_62 <dbl>,
-    ## #   activity_63 <dbl>, activity_64 <dbl>, activity_65 <dbl>,
-    ## #   activity_66 <dbl>, activity_67 <dbl>, activity_68 <dbl>,
-    ## #   activity_69 <dbl>, activity_70 <dbl>, activity_71 <dbl>,
-    ## #   activity_72 <dbl>, activity_73 <dbl>, activity_74 <dbl>,
-    ## #   activity_75 <dbl>, activity_76 <dbl>, activity_77 <dbl>,
-    ## #   activity_78 <dbl>, activity_79 <dbl>, activity_80 <dbl>,
-    ## #   activity_81 <dbl>, activity_82 <dbl>, activity_83 <dbl>,
-    ## #   activity_84 <dbl>, activity_85 <dbl>, activity_86 <dbl>,
-    ## #   activity_87 <dbl>, activity_88 <dbl>, activity_89 <dbl>,
-    ## #   activity_90 <dbl>, activity_91 <dbl>, activity_92 <dbl>,
-    ## #   activity_93 <dbl>, activity_94 <dbl>, activity_95 <dbl>,
-    ## #   activity_96 <dbl>, activity_97 <dbl>, activity_98 <dbl>,
-    ## #   activity_99 <dbl>, activity_100 <dbl>, activity_101 <dbl>,
-    ## #   activity_102 <dbl>, activity_103 <dbl>, activity_104 <dbl>, …
+    ## # A tibble: 50,400 x 7
+    ##     week day_id day    activity_min activity_count weekkday weekend
+    ##    <dbl>  <dbl> <chr>  <chr>                 <dbl> <lgl>    <lgl>  
+    ##  1     1      1 Friday " 1"                   88.4 TRUE     FALSE  
+    ##  2     1      1 Friday " 2"                   82.2 TRUE     FALSE  
+    ##  3     1      1 Friday " 3"                   64.4 TRUE     FALSE  
+    ##  4     1      1 Friday " 4"                   70.0 TRUE     FALSE  
+    ##  5     1      1 Friday " 5"                   75.0 TRUE     FALSE  
+    ##  6     1      1 Friday " 6"                   66.3 TRUE     FALSE  
+    ##  7     1      1 Friday " 7"                   53.8 TRUE     FALSE  
+    ##  8     1      1 Friday " 8"                   47.8 TRUE     FALSE  
+    ##  9     1      1 Friday " 9"                   55.5 TRUE     FALSE  
+    ## 10     1      1 Friday " 10"                  43.0 TRUE     FALSE  
+    ## # … with 50,390 more rows
+
+  - This dataset has 50400 observations with 7. Key variables include
+    order details, product name, aisle, and department with respective
+    numeric IDs associated with them. Variables include the day of the
+    week the activity occurs, the minute in which activity is being
+    recorded, and the acceleration count of the 63 y/o male patient’s
+    body at each minute. Additionally, the dataset includes variables
+    that categorize if the date/minute/count being logged is a weekend
+    or weekday.
+
+Aggregate dataset accross minutes to create a total activity variable
+for each day, and create a table showing these totals:
+
+  - Trends include:
